[project]
name = "rad"
description = "Radiant Tooling Library"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "Radiant Authors" }]
dependencies = [
    "pre-commit",
    "clang-format",
    "pylint",
    "black",
    "lcov_cobertura",
    "yamllint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rad = "rad.cli:main"
